# hedgehogMatrixMultiplication

./: CMakeLists.txt  main.cpp
cmake-modules/: FindHedgehog.cmake
data/: MatrixAdata.h  MatrixBdata.h  MatrixBlockData.h  MatrixBlockMulData.h  MatrixRequestData.h  MatrixState.h  StateContainer.h
state/: MatrixState.h
task/: GenMatrixAtask.h  GenMatrixBtask.h  GenMatrixTask.h  ProductTask.h
